feat(security): add style to login page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}LV Social Wall{% endblock %}</title>
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <a href="{{ path('connect_linkvalue_start') }}">LOGIN</a>
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
