--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -1,3 +1,25 @@
+@import "~bootstrap/scss/bootstrap";
+
 body {
     background-color: lightgray;
+}
+
+.login-container {
+    position: relative;
+    background-color: #fff;
+    max-width: 600px;
+    height: 400px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+    padding: 25px;
+    .btn {
+        border: #5ba0d1 solid 1px;
+        background-color: #5ba0d1;
+        position: absolute;
+        bottom: 75px;
+        left: 175px;
+        width: 250px;
+    }
 }
